force-app/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Battery Systems</fullName>
            </value>
            <value>
                <fullName>Cable Systems</fullName>
            </value>
            <value>
                <fullName>Camera Systems</fullName>
            </value>
            <value>
                <fullName>Cleaning Supplies</fullName>
            </value>
            <value>
                <fullName>Communication Equipment</fullName>
            </value>
            <value>
                <fullName>Control Equipment</fullName>
            </value>
            <value>
                <fullName>Cooling Systems</fullName>
            </value>
            <value>
                <fullName>Drone Systems</fullName>
            </value>
            <value>
                <fullName>Electronic Components</fullName>
            </value>
            <value>
                <fullName>Foundation Systems</fullName>
            </value>
            <value>
                <fullName>Generator Systems</fullName>
            </value>
            <value>
                <fullName>Grounding Equipment</fullName>
            </value>
            <value>
                <fullName>Hardware Components</fullName>
            </value>
            <value>
                <fullName>Heating Systems</fullName>
            </value>
            <value>
                <fullName>Installation Supplies</fullName>
            </value>
            <value>
                <fullName>Insulation Equipment</fullName>
            </value>
            <value>
                <fullName>Lubrication Supplies</fullName>
            </value>
            <value>
                <fullName>Machinery</fullName>
            </value>
            <value>
                <fullName>Measurement Equipment</fullName>
            </value>
            <value>
                <fullName>Mechanical Systems</fullName>
            </value>
            <value>
                <fullName>Monitoring Equipment</fullName>
            </value>
            <value>
                <fullName>Power Electronics</fullName>
            </value>
            <value>
                <fullName>Power Quality Equipment</fullName>
            </value>
            <value>
                <fullName>Protection Equipment</fullName>
            </value>
            <value>
                <fullName>Rack Systems</fullName>
            </value>
            <value>
                <fullName>Recording Equipment</fullName>
            </value>
            <value>
                <fullName>Regulation Equipment</fullName>
            </value>
            <value>
                <fullName>Safety Equipment</fullName>
            </value>
            <value>
                <fullName>Safety Systems</fullName>
            </value>
            <value>
                <fullName>Sealing Supplies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>