force-app/main/default/objects/Product2/fields/Product_Region__c.field-meta.xml
<CustomField>
    <fullName>Product_Region__c</fullName>
    <label>Product Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asia Pacific</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>